# ai-sh

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MIGRATION_V0.2.md  PRD.md  PROMPT_EVALUATION.md  ROADMAP.md  SHELL_NATIVE_PLAN.md
scripts/: evaluate_prompt.py  smoke_wheel.sh
src/ai_sh/: __init__.py  answer.py  cli.py  config.py  exceptions.py  executor.py  history.py  llm.py  protocol.py  safety.py  suggestion.py  ui.py
src/ai_sh/shell/: __init__.py  bash.py  common.py  zsh.py
src/tmksh/: __init__.py  answer.py  cli.py  config.py  context.py  exceptions.py  executor.py  history.py  interaction.py  llm.py  protocol.py  safety.py  suggestion.py  ui.py
src/tmksh/shell/: __init__.py  bash.py  common.py  fish.py  prompt.py  zsh.py
tests/: test_answer.py  test_cli.py  test_config.py  test_context.py  test_executor.py  test_history.py  test_interaction.py  test_llm.py  test_protocol.py  test_safety.py  test_shell_bash.py  test_shell_fish.py  test_shell_zsh.py  test_suggestion.py  test_ui.py
