[project]
name = "tmksh"
version = "0.1.0"
description = "Natural language shell command assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "openai>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
tmksh = "tmksh.cli:tmksh"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmksh"]
